--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -51,6 +51,8 @@
     margin: 1rem auto;
     border-radius: 1rem;
     box-shadow: 0 0 3px var(--light-grey-blue);
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .todo-item {
